style: Ajuste layout e estilos Banner

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
         <title>Agro&Solar</title>
     </head>
     <body>
-        <header id="banner" class="sessao z-20 w-full overflow-hidden relative bg-img-banner bg-cover bg-center justify-center lg:h-dvh lg:max-h-dvh">
-            <nav id="nav-logo" class="z-50 flex absolute top-0 w-full items-center min-h-20">
-                <div class="flex mx-auto justify-between w-5/6 lg:w-8/12">
+        <header id="banner" class="z-20 w-full">
+            <nav id="nav-logo" class="z-50 flex absolute top-0 w-full items-center">
+                <div class="flex justify-between w-1/2 mx-auto my-6">
                     <!--<img class="h-14 col-span-2" src="./assets/img/logo-agro-e-solar-2.png" loading="lazy" alt="">-->
                     <ul class="justify-between items-center w-full hidden lg:flex">
                         <!--<li><a href="/">Inicio</a></li>-->
@@ -43,65 +43,43 @@
                 <li class="list-none p-4"><a class="fechar-menu" href="#equipe">Equipe</a></li>
                 <li class="list-none p-4"><a class="fechar-menu" href="#contato">Fale Conosco</a></li>
             </div>
-            <div class="coluna w-10/12 text-branco z-20 mx-auto">
-                <div class="coluna items-center justify-center mb-12">
-                    <img class="w-3/6 mb-6 img-sombra lg:w-4/12" src="./assets/img/logo-agro-e-solar-4.png" loading="lazy" alt="">
-                    <h1 class="mb-2 text-center lg:w-2/3">Transforme a Luz do Sol em Economia</h1>
-                    <p class="m-0 text-xs text-center lg:w-2/3 lg:text-sm">Reduza custos e potencialize seu negócio com soluções inteligentes. Transforme a luz do sol em economia significativa e uma operação mais ecológica, garantindo não apenas um futuro mais verde, mas também um presente mais eficiente e lucrativo.</p>
-                </div>
-                <div class="grid gap-12 lg:grid-cols-4 lg:gap-6">
-                    <a href="#agrifotovoltaico">
-                        <span class="banner-box">
-                            <div class="box-titulo relative">
-                                <h4 class="text-preto font-black mb-0">Agrifotovoltaico</h5>
-                                <p class="text-preto text-xs">Agrifotovoltaico para agricultura mais produtiva</p>
-                            </div>
-                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
-                            <p class="p-4 text-xs text-preto m-0">O sistema agrifotovoltaico consiste na geração de energia elétrica de origem solar concomitante com a produção agrícola. Veja o estudo sobre cana de açucar na usina Santa Clotilde.</p>
-                            <iconify-icon icon="lucide:circle-arrow-down" class="text-verde m-4 mt-0" height="1.5rem" width="1.5rem"></iconify-icon>
-                        </span>
-                    </a>
-                    <a href="#locacao">
-                        <span class="banner-box">
-                            <div class="box-titulo relative">
-                                <h4 class="text-preto font-black mb-0">Locação de Sistemas</h5>
-                                <p class="text-preto text-xs">Investimento zero e economia já no primeiro mês</p>
-                            </div>
-                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
-                            <p class="p-4 text-xs text-preto m-0">A Agro&Solar apresenta uma solução inovadora que combina economia e sustentabilidade. Você não investe nada e ganha já no mês seguinte.</p>
-                            <iconify-icon icon="lucide:circle-arrow-down" class="text-verde m-4 mt-0" height="1.5rem" width="1.5rem"></iconify-icon>
-                        </span>
-                    </a>
-                    <a href="#grandes-projetos">
-                        <span class="banner-box">
-                            <div class="box-titulo relative">
-                                <h4 class="text-preto font-black mb-0">Grandes Projetos</h5>
-                                <p class="text-preto text-xs font-semibold">Projetos Turnkey com melhor custo benefício</p>
-                            </div>
-                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
-                            <p class="p-4 text-xs text-preto m-0">Entendemos que grandes empresas buscam não apenas reduzir custos. Oferecemos soluções confiáveis e seguras, com instalação e equipamentos de alta qualidade, inclusive internacionais.</p>
-                            <iconify-icon icon="lucide:circle-arrow-down" class="text-verde m-4 mt-0" height="1.5rem" width="1.5rem"></iconify-icon>
-                        </span>
-                    </a>
-                    <a href="#seu-projeto">
-                        <span class="banner-box">
-                            <div class="box-titulo relative">
-                                <h4 class="text-preto font-black mb-0">O Seu Projeto</h5>
-                                <p class="text-preto text-xs">Projetos para residências e pequenos negócios</p>
-                            </div>
-                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
-                            <p class="p-4 text-xs text-preto m-0">Oferecemos o menor custo inicial, permitindo economia desde o primeiro mês. Na média, você paga o seu investimento em menos de 2 anos e meio.</p>
-                            <iconify-icon icon="lucide:circle-arrow-down" class="text-verde m-4 mt-0" height="1.5rem" width="1.5rem"></iconify-icon>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <span class="top-0 left-0 z-10 absolute w-full h-full bg-gradient-to-b from-[rgba(0,69,160,0.8)] to-[rgba(0,69,160,0.3)]"></span>
         </header>
         <main>
             <a href="/#banner" class="z-50 fixed flex bottom-8 right-8 w-10 aspect-square">
                 <iconify-icon icon="lucide:circle-arrow-up" class="text-verde" width="100%"></iconify-icon>
             </a>
+            <section class="sessao overflow-hidden relative bg-img-banner bg-cover bg-center justify-center lg:h-dvh lg:max-h-dvh">
+                <div class="coluna w-10/12 text-branco z-20 mx-auto justify-end">
+                    <div class="coluna items-center justify-center mb-8">
+                        <img class="w-3/6 mb-6 img-sombra lg:w-4/12" src="./assets/img/logo-agro-e-solar-4.png" loading="lazy" alt="">
+                        <h1 class="mb-2 text-center lg:w-2/3">Transforme a Luz do Sol em Economia</h1>
+                        <p class="m-0 text-xs text-center lg:w-2/3 lg:text-sm">Reduza custos e potencialize seu negócio com soluções inteligentes. Transforme a luz do sol em economia significativa e uma operação mais ecológica, garantindo não apenas um futuro mais verde, mas também um presente mais eficiente e lucrativo.</p>
+                    </div>
+                    <div class="grid gap-12 lg:grid-cols-4 lg:gap-6">
+                        <a href="#agrifotovoltaico" class="banner-box">
+                            <h4 class="box-titulo relative text-white font-black m-0">Agrifotovoltaico</h5>
+                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
+                            <p class="p-4 text-xs text-neutral-600 m-0">O sistema agrifotovoltaico consiste na geração de energia elétrica de origem solar concomitante com a produção agrícola. Veja o estudo sobre cana de açucar na usina Santa Clotilde.</p>
+                        </a>
+                        <a href="#locacao" class="banner-box">
+                            <h4 class="box-titulo relative text-white font-black m-0">Locação de Sistemas</h5>
+                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
+                            <p class="p-4 text-xs text-neutral-600 m-0">A Agro&Solar apresenta uma solução inovadora que combina economia e sustentabilidade. Você não investe nada e ganha já no mês seguinte.</p>
+                        </a>
+                        <a href="#grandes-projetos" class="banner-box">
+                            <h4 class="box-titulo relative text-white font-black m-0">Grandes Projetos</h5>
+                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
+                            <p class="p-4 text-xs text-neutral-600 m-0">Entendemos que grandes empresas buscam não apenas reduzir custos. Oferecemos soluções confiáveis e seguras, com instalação e equipamentos de alta qualidade, inclusive internacionais.</p>
+                        </a>
+                        <a href="#seu-projeto" class="banner-box">
+                            <h4 class="box-titulo relative text-wrap font-black m-0">Pequenos Projetos</h5>
+                            <div class="bg-verde w-full h-4" style="clip-path: polygon(0 0, 100% 0, 0 100%);"></div>
+                            <p class="p-4 text-xs text-neutral-600 m-0">Oferecemos o menor custo inicial, permitindo economia desde o primeiro mês. Na média, você paga o seu investimento em menos de 2 anos e meio.</p>
+                        </a>
+                    </div>
+                </div>
+                <span class="top-0 left-0 z-10 absolute w-full h-full bg-gradient-to-b from-[rgba(0,69,160,0.8)] to-[rgba(0,69,160,0.3)]"></span>
+            </section>
             <section class="sessao bg-cinza-claro-2 relative overflow-hidden">
                 <span id="agrifotovoltaico" class="absolute -top-8"></span>
                 <container class="conteudo lg:grid-cols-5">
