--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,16 @@
                         <img src="./assets/img/engenheiro-com-placas.jpg" loading="lazy" alt="" class="aspect-square scale-90 rounded-lg object-cover lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                         <iconify-icon icon="lucide:chevrons-left" class="z-30 top-0 -right-8 text-9xl text-verde absolute"></iconify-icon>
                     </div>
-                    <div class="coluna col-span-3 justify-center mt-8 lg:mt-0">
+                    <div class="col-span-3 coluna justify-center">
                         <h2>Agrifotovoltaico</h2>
+                        <p class="mb-2">O sistema agrifotovoltaico tem como missão promover a sustentabilidade e a eficiência energética, integrando a geração de energia solar com práticas agrícolas inovadoras. Buscamos oferecer soluções acessíveis que beneficiem tanto os produtores rurais quanto o meio ambiente.</p>
+                        <p class="mb-2">Nossa visão é ser líder no mercado de energias renováveis, reconhecido pela excelência em tecnologias agrifotovoltaicas, contribuindo para um futuro mais sustentável e impulsionando a transformação do setor agrícola por meio da energia solar.</p>
+                        <p class="mb-2">Utilizando esta sistemática, cai o principal argumento contra o uso da geração elétrica com energia solar, ou seja, a inutilização de terras férteis para agricultura.</p>
+                        <p class="mb-2">Ao contrário do que se pode imaginar, a redução da energia solar incidente nas plantas pode melhorar a qualidade dos produtos agrícolas e aumentar a colheita.</p>
+                        <p class="mb-2">Pelo fato de o sistema manter temperaturas mais baixas, sombreamento parcial e maior umidade, altera o microclima da plantação e consegue-se obter redução significativa no uso de água pela diminuição da evapotranspiração e aumento da produtividade de várias lavouras em função da diminuição do stress causado pelo excesso de calor e de luminosidade.</p>
+                    </div>
+                    <!--
+                    <div class="coluna col-span-3 justify-center mt-8 lg:mt-0">
                         <h3 class="text-azul font-extrabold">Gerando inovação para os mercados que utilizam painéis fotovoltaicos</h3>
                         <div class="mb-8">
                             <p><strong class="text-xl text-black mr-2">1.</strong> Uso compartilhado do solo para atividades agropastoris e geração de energia fotovoltaica para oferecer uma solução sustentável que maximiza o aproveitamento da terra.</p>
@@ -120,16 +128,9 @@
                             <p>Novo sistema de fixação de painéis que permite acompanhar os ciclos solares e gera significativo ganho de produtividade.</p>
                         </div>
                     </div>
+                    -->
                 </container>
-                <container class="conteudo my-16">
-                    <h2 class="font-extrabold text-azul">Tenha até 10 vezes mais lucro por safra</h2>
-                    <p class="mb-2">O sistema agrifotovoltaico tem como missão promover a sustentabilidade e a eficiência energética, integrando a geração de energia solar com práticas agrícolas inovadoras. Buscamos oferecer soluções acessíveis que beneficiem tanto os produtores rurais quanto o meio ambiente.</p>
-                    <p class="mb-2">Nossa visão é ser líder no mercado de energias renováveis, reconhecido pela excelência em tecnologias agrifotovoltaicas, contribuindo para um futuro mais sustentável e impulsionando a transformação do setor agrícola por meio da energia solar.</p>
-                    <p class="mb-2">Utilizando esta sistemática, cai o principal argumento contra o uso da geração elétrica com energia solar, ou seja, a inutilização de terras férteis para agricultura.</p>
-                    <p class="mb-2">Ao contrário do que se pode imaginar, a redução da energia solar incidente nas plantas pode melhorar a qualidade dos produtos agrícolas e aumentar a colheita.</p>
-                    <p class="mb-2">Pelo fato de o sistema manter temperaturas mais baixas, sombreamento parcial e maior umidade, altera o microclima da plantação e consegue-se obter redução significativa no uso de água pela diminuição da evapotranspiração e aumento da produtividade de várias lavouras em função da diminuição do stress causado pelo excesso de calor e de luminosidade.</p>
-                    <p class="mb-2">Veja aqui o caso da Usina de Santa Clotilde:</p>
-                </container>
+                <!--
                 <span id="pesquisa" class="-top-8"></span>
                 <container class="conteudo lg:grid-cols-2">
                     <div class="lg:col-span-2">
@@ -260,21 +261,19 @@
                         <a class="mt-8" href="./assets/pdf/projeto_agrofotovoltaico_usina_santa_clotilde.pdf" target="_blank"><strong class="cursor-pointer text-azul">Projeto Usina SANTA CLOTILDE</strong></a>
                     </span>
                 </container>
+                -->
             </section>
             <section class="sessao">
                 <span id="locacao" class="absolute -top-8"></span>
                 <container class="conteudo lg:grid-cols-5">
-                    <div class="col-span-2">
-                        <img src="./assets/img/Projeto Smart Leme_3.jpg" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
-                    </div>
-                    <div class="coluna justify-center col-span-3">
+                    <div class="coluna justify-center pr-16 col-span-3">
                         <h2 class="flex items-center">
                             <iconify-icon icon="lucide:grid-3x3" class="mr-4"></iconify-icon>
                             Locação de Sistemas
                         </h2>
-                        <p class="mb-16">A Agro&Solar apresenta uma solução inovadora que combina economia e sustentabilidade: a locação de sistemas fotovoltaicos. Neste modelo, a Agro&Solar fornece gratuitamente o sistema e garante uma redução de sua conta de energia em seguida à instalação. <strong>Além disso, a economia gerada proporciona ganhos financeiros a longo prazo, tornando o investimento uma fonte de retorno constante (veja na planilha abaixo).</strong></p>
+                        <p class="mb-8">A Agro&Solar apresenta uma solução inovadora que combina economia e sustentabilidade: a locação de sistemas fotovoltaicos. Neste modelo, a Agro&Solar fornece gratuitamente o sistema e garante uma redução de sua conta de energia em seguida à instalação. <strong>Além disso, a economia gerada proporciona ganhos financeiros a longo prazo, tornando o investimento uma fonte de retorno constante (veja na planilha abaixo).</strong></p>
                         <strong>
-                            <ul class="grid gap-4">
+                            <ul class="grid gap-1">
                                 <li>Redução imediata na conta de luz</li>
                                 <li>Economia sempre a longo prazo</li>
                                 <li>Flexibilidade e acessibilidade</li>
@@ -284,6 +283,10 @@
                             </ul>
                         </strong>
                     </div>
+                    <div class="col-span-2">
+                        <img src="./assets/img/Projeto Smart Leme_3.jpg" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
+                    </div>
+                    <!--
                     <div id="tabela-investmento" class="overflow-x-scroll lg:overflow-x-auto lg:mt-16 lg:col-span-5">
                         <h3 class="mx-auto w-full text-center mt-16">ECONOMIA NAS CONTAS DE ELETRICIDADE SE 1kW = R$ 1,00 (em R$)</h3>
                         <div class="w-full flex">
@@ -645,12 +648,16 @@
                             </table>
                         </div>
                     </div>
+                    -->
                 </container>
             </section>
             <section class="sessao">
                 <span id="grandes-projetos" class="absolute -top-8"></span>
                 <container class="conteudo lg:grid-cols-5">
-                    <div class="coluna justify-center lg:col-span-3">
+                    <div class="lg:col-span-2">
+                        <img src="./assets/img/grande-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:20px 20px 0 #B3DE00;">
+                    </div>
+                    <div class="coluna justify-center pl-16 lg:col-span-3">
                         <h2 class="flex items-center">
                             <iconify-icon icon="lucide:building-2" class="mr-4"></iconify-icon>
                             Grandes Projetos
@@ -658,23 +665,20 @@
                         <p>Oferecemos projetos completos que incluem estudos topográficos, parecer de acesso, opções de financiamento e autorização com órgãos regionais. Trabalhamos com a abordagem 'turnkey', onde cuidamos de todas as etapas do projeto, desde a concepção até a execução, garantindo que você tenha uma solução pronta para uso. Além disso, analisamos investimentos e retornos para garantir a melhor solução para você.</p>
                         <!--<p>A Lupo é uma renomada fábrica brasileira especializada em meias, cuecas e roupas íntimas, reconhecida pela qualidade e inovação em seus produtos. Com sede no interior de São Paulo, a empresa tem se destacado no mercado nacional e internacional, priorizando sustentabilidade e eficiência em suas operações. Ao adotar soluções como sistemas agrifotovoltaicos, empresas como a Lupo podem reduzir custos com energia e reforçar seu compromisso com práticas ambientais responsáveis.</p>-->
                     </div>
-                    <div class="lg:col-span-2">
-                        <img src="./assets/img/grande-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:20px 20px 0 #B3DE00;">
-                    </div>
                 </container>
             </section>
             <section class="sessao">
                 <span id="seu-projeto" class="absolute -top-8"></span>
                 <container class="conteudo flex flex-col-reverse lg:grid-cols-5 lg:grid">
-                    <div class="lg:col-span-2">
-                        <img src="./assets/img/pequeno-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
-                    </div>
-                    <div class="coluna justify-center lg:col-span-3">
+                    <div class="coluna justify-center pr-16 lg:col-span-3">
                         <h2 class="flex items-top">
                             <iconify-icon icon="lucide:house" class="mr-4"></iconify-icon>
-                            O Seu Projeto
+                            Pequenos Projetos
                         </h2>
-                        <p>Na Agro&Solar, entendemos que pequenos negócios e residências buscam soluções acessíveis e sustentáveis. Nossos sistemas de energia solar são projetados para reduzir significativamente suas contas de luz, permitindo que você economize e invista em outras áreas. E o melhor: toda análise é gratuita! Você pode gerar sua própria energia sem altos investimentos iniciais, promovendo um ambiente mais sustentável. Junte-se a nós e transforme seu espaço em um exemplo de eficiência e responsabilidade ambiental.</p>
+                        <p>Na Agro&Solar, entendemos que pequenos negócios e residências buscam soluções acessíveis e sustentáveis. Nossos sistemas de energia solar são projetados para reduzir significativamente suas contas de luz, permitindo que você economize e invista em outras áreas. <br><br> E o melhor: toda análise é gratuita! Você pode gerar sua própria energia sem altos investimentos iniciais, promovendo um ambiente mais sustentável. Junte-se a nós e transforme seu espaço em um exemplo de eficiência e responsabilidade ambiental.</p>
+                    </div>
+                    <div class="lg:col-span-2">
+                        <img src="./assets/img/pequeno-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                     </div>
                 </container>
             </section>
