--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -187,68 +187,67 @@
                                 <p class="m-0 text-xs mb-4">Com os valores economizados aplicados a 12% ao  ano, o montante pode ultrapassar R$ 356.000  ao longo de 20 anos, proporcionando um lucro significativo além da economia nas contas de luz.</p>
                             </div>
                         </div>
-                        <div class="mt-12">
-                            <canvas id="myChart" class="w-full max-h-[500px] p-12 bg-neutral-100 rounded-lg"></canvas>
-                        </div>
                     </span>
                 </div>
             </section>
             <section class="py-20">
-                <div class="conteudo">
-                    <input type="range" name="" id="range-conta" value="0" min="0" max="20000" step="1000">
-                    <p id="valor-range"></p>
-                    <table>
+                <div class="conteudo grid-cols-5">
+                    <input class="w-1/3 mx-auto col-span-5" type="range" name="" id="range-conta" value="0" min="0" max="20000" step="1000">
+                    <table class="w-full col-span-2">
                         <tbody>
                             <tr>
-                                <td>CONTA (Mensal)</td>
+                                <td class="tab-descr-valor">CONTA (Mensal)</td>
                                 <td id="conta-mensal" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>CONSUMO (KWh/mês)</td>
+                                <td class="tab-descr-valor">CONSUMO (KWh/mês)</td>
                                 <td id="consumo" class="tab-orcamento-valores">0 kWh</td>
                             </tr>
                             <tr>
-                                <td>COMPRA (Invest.)</td>
+                                <td class="tab-descr-valor">COMPRA (Invest.)</td>
                                 <td id="compra" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>                            
                             <tr>
-                                <td>Economia no Ano 01</td>
+                                <td class="tab-descr-valor">Economia no Ano 01</td>
                                 <td id="ano-01" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Economia no Ano 02</td>
+                                <td class="tab-descr-valor">Economia no Ano 02</td>
                                 <td id="ano-02" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Economia no Ano 03</td>
+                                <td class="tab-descr-valor">Economia no Ano 03</td>
                                 <td id="ano-03" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Economia no Ano 04</td>
+                                <td class="tab-descr-valor">Economia no Ano 04</td>
                                 <td id="ano-04" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Economia no Ano 05</td>
+                                <td class="tab-descr-valor">Economia no Ano 05</td>
                                 <td id="ano-05" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Economia no Ano 06</td>
+                                <td class="tab-descr-valor">Economia no Ano 06</td>
                                 <td id="ano-06" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Economia no Ano 07 até ano 20</td>
+                                <td class="tab-descr-valor">Economia no Ano 07 até ano 20</td>
                                 <td id="ano-07" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>GANHO TOTAL S/ APLICAÇÃO</td>
+                                <td class="tab-descr-valor">GANHO TOTAL S/ APLICAÇÃO</td>
                                 <td id="ganho-sem-aplic" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
+                                <td class="tab-descr-valor">GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
                                 <td id="ganho-com-aplic" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                         </tbody>
                     </table>
+                    <div class="col-span-3 h-full">
+                        <canvas id="myChart" class="p-4 bg-neutral-100 rounded-lg" style="width: 100%; height: 400px;"></canvas>
+                    </div>
                 </div>
             </section>
             <section class="py-20 bg-paineis-campo bg-cover bg-center relative">
