--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -13,7 +13,7 @@
             <section class="bg-neutral-800 py-16 lp-back">
                 <div class="conteudo">
                     <span class="flex justify-center flex-col h-60">
-                        <h1 class="font-extrabold text-neutral-100 text-6xl uppercase">Compramos sua conta<br>de energia</h1>
+                        <h1 class="font-extrabold text-neutral-100 text-6xl uppercase">Troque seu fornecedor <br> e tenha <strong>20% de economia</strong> <br> em sua conta</h1>
                     </span>
                 </div>
             </section>
@@ -22,7 +22,7 @@
                     <div class="col-span-3 flex flex-col justify-center pr-16">
                         <img class="w-72 mb-6" src="../assets/img/logo-agro-e-solar-5.png" alt="">
                         <p class="text-3xl font-extrabold uppercase leading-10 text-azul">Comece com a economia de 20% ao ano e aumenta para 50%</p>
-                        <p class="text-xl uppercase text-neutral-400"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong></p>
+                        <p class="text-xl uppercase text-neutral-400"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong> em 20 anos.</p>
                         <button class="btn w-80 mt-12 text-xl shadow-md rounded-lg bg-verde text-branco font-extrabold">Quero economizar</button>
                     </div>
                     <img src="../assets/img/pequeno-projetos.png" alt="" class="rounded-lg col-span-2" style="box-shadow:-20px 20px 0 #B3DE00">
@@ -42,12 +42,16 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 6.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
+                            <p class="text-sm mb-1">Conta Anual em 20 anos:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 120.000</p>
+                        </span>
+                        <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Economia em 20 anos:</p>
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 52.800</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
-                            <p class="m-0 text-3xl font-extrabold text-verde">R$ 178.179</p>
+                            <p class="m-0 text-4xl font-extrabold text-verde">R$ 178.179</p>
                         </span>
                     </div>
                     <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
@@ -61,12 +65,16 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 12.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
+                            <p class="text-sm mb-1">Conta Anual em 20 anos:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 240.000</p>
+                        </span>
+                        <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Economia em 20 anos:</p>
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 105.600</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
-                            <p class="m-0 text-3xl font-extrabold text-verde">R$ 356.358</p>
+                            <p class="m-0 text-4xl font-extrabold text-verde">R$ 356.358</p>
                         </span>
                     </div>
                     <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
@@ -80,14 +88,74 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 60.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
+                            <p class="text-sm mb-1">Conta Anual em 20 anos:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 1.200.000</p>
+                        </span>
+                        <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Economia em 20 anos:</p>
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 528.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
-                            <p class="m-0 text-3xl font-extrabold text-verde">R$ 1.781.791</p>
+                            <p class="m-0 text-4xl font-extrabold text-verde">R$ 1.781.791</p>
                         </span>
                     </div>
+                </div>
+                <div class="conteudo grid-cols-5">
+                    <!--<input class="w-1/3 mx-auto col-span-5" type="range" name="" id="range-conta" value="0" min="0" max="20000" step="1000">-->
+                    <input class="w-1/3 mx-auto col-span-5" type="number" name="" id="range-conta" value="0" min="0" max="20000">
+                    <table class="w-full col-span-2">
+                        <tbody>
+                            <tr>
+                                <td class="tab-descr-valor">CONTA (Mensal)</td>
+                                <td id="conta-mensal" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">CONSUMO (KWh/mês)</td>
+                                <td id="consumo" class="tab-orcamento-valores">0 kWh</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">COMPRA (Invest.)</td>
+                                <td id="compra" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>                            
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 01</td>
+                                <td id="ano-01" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 02</td>
+                                <td id="ano-02" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 03</td>
+                                <td id="ano-03" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 04</td>
+                                <td id="ano-04" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 05</td>
+                                <td id="ano-05" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 06</td>
+                                <td id="ano-06" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">Economia no Ano 07 até ano 20</td>
+                                <td id="ano-07" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">GANHO TOTAL S/ APLICAÇÃO</td>
+                                <td id="ganho-sem-aplic" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                            <tr>
+                                <td class="tab-descr-valor">GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
+                                <td id="ganho-com-aplic" class="tab-orcamento-valores">R$ 0,00</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </section>
             <section class="py-20 bg-neutral-800">
