--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -10,30 +10,30 @@
     <body>
         <header></header>
         <main>
-            <section class="bg-neutral-800 py-16 lp-back">
+            <section class="bg-neutral-800 lp-back py-8 lg:py-16">
                 <div class="conteudo">
                     <span class="flex justify-center flex-col h-60">
-                        <h1 class="font-extrabold text-neutral-100 text-6xl uppercase">Troque seu fornecedor <br> e tenha <strong>20% de economia</strong> <br> em sua conta</h1>
+                        <h1 class="font-extrabold text-neutral-100 uppercase lg:text-6xl">Troque seu fornecedor <br> e tenha <strong>20% de economia</strong> <br> em sua conta</h1>
                     </span>
                 </div>
             </section>
-            <section class="py-20 lp-banner">
-                <div class="conteudo grid-cols-5">
-                    <div class="col-span-3 flex flex-col justify-center pr-16">
-                        <img class="w-72 mb-6" src="../assets/img/logo-agro-e-solar-5.png" alt="">
-                        <p class="text-3xl font-extrabold uppercase leading-10 text-azul">Comece com a economia de 20% ao ano e aumenta para 50%</p>
-                        <p class="text-xl uppercase text-neutral-400"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong> em 20 anos.</p>
-                        <a class="mt-12  w-80" href="https://api.whatsapp.com/send?phone=5511948084740&text=Ol%C3%A1!%0A%0AGostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20loca%C3%A7%C3%A3o%20de%20sistemas%20fotovoltaicos." target="_blank">
+            <section class="lp-banner py-8 lg:py-16">
+                <div class="conteudo lg:grid-cols-5">
+                    <div class="flex flex-col justify-center lg:col-span-3 lg:pr-16">
+                        <img class="w-full mb-6 lg:w-72" src="../assets/img/logo-agro-e-solar-5.png" alt="Logotipo Agro&Solar">
+                        <p class="font-extrabold uppercase text-azul lg:text-3xl lg:leading-10">Comece com a economia de 20% ao ano e aumenta para 50%</p>
+                        <p class="uppercase text-neutral-400 lg:text-xl"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong> em 20 anos.</p>
+                        <a class="mt-12 w-full lg:w-80" href="https://api.whatsapp.com/send?phone=5511948084740&text=Ol%C3%A1!%0A%0AGostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20loca%C3%A7%C3%A3o%20de%20sistemas%20fotovoltaicos." target="_blank">
                             <button class="btn w-full text-xl shadow-md rounded-lg bg-verde text-branco font-extrabold">Quero trocar</button>
                         </a>
                     </div>
-                    <img src="../assets/img/pequeno-projetos.png" alt="" class="rounded-lg col-span-2" style="box-shadow:-20px 20px 0 #B3DE00">
+                    <img src="../assets/img/pequeno-projetos.png" alt="Pequenos Projetos" class="rounded-lg scale-90 lg:scale-100 lg:col-span-2" style="box-shadow:-20px 20px 0 #B3DE00">
                 </div>
             </section>
-            <section class="py-20 bg-neutral-100">
-                <div class="conteudo grid-cols-3">
-                    <h2 class="col-span-3 text-center font-extrabold">Veja o quanto você pode economizar:</h2>
-                    <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
+            <section class="bg-neutral-100 py-8 lg:py-16">
+                <div class="conteudo lg:grid-cols-3">
+                    <h2 class="text-center font-extrabold lg:col-span-3">Veja o quanto você pode economizar:</h2>
+                    <div class="flex flex-col border border-neutral-300 rounded-xl shadow-lg p-6 lg:p-12">
                         <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Se o valor da sua conta é:</p>
@@ -53,10 +53,10 @@
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
-                            <p class="m-0 text-4xl font-extrabold text-verde">R$ 178.179</p>
+                            <p class="m-0 font-extrabold text-verde text-3xl lg:text-4xl">R$ 178.179</p>
                         </span>
                     </div>
-                    <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
+                    <div class="flex flex-col border border-neutral-300 rounded-xl shadow-lg p-6 lg:p-12">
                         <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Se o valor da sua conta é:</p>
@@ -76,10 +76,10 @@
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
-                            <p class="m-0 text-4xl font-extrabold text-verde">R$ 356.358</p>
+                            <p class="m-0 font-extrabold text-verde text-3xl lg:text-4xl">R$ 356.358</p>
                         </span>
                     </div>
-                    <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
+                    <div class="flex flex-col border border-neutral-300 rounded-xl shadow-lg p-6 lg:p-12">
                         <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Se o valor da sua conta é:</p>
@@ -99,15 +99,15 @@
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
-                            <p class="m-0 text-4xl font-extrabold text-verde">R$ 1.781.791</p>
+                            <p class="m-0 font-extrabold text-verde text-3xl lg:text-4xl">R$ 1.781.791</p>
                         </span>
                     </div>
                 </div>
                 <div class="conteudo mt-20">
-                    <div class="w-1/2 mx-auto p-16 rounded-xl bg-white shadow-lg">
+                    <div class="mx-auto rounded-xl bg-white shadow-lg p-4 -ml-4 -mr-4 lg:ml-auto lg:mr-auto lg:w-1/2 lg:p-16">
                         <h2>Faça uma simulação</h2>
                         <span class="mb-16 font-extrabold">
-                            <label for="">Indira o valor médio da sua conta mensal: R$ </label>
+                            <label for="">Indira o valor médio da sua conta mensal:<br class="">R$ </label>
                             <input class="outline-0 border-0" type="number" name="" id="range-conta" value="0" min="0" max="20000">
                         </span>
                         <table class="w-full mt-6">
@@ -170,15 +170,15 @@
                     </div>
                 </div>
             </section>
-            <section class="py-20 bg-neutral-800">
-                <div class="conteudo grid-cols-5">
-                    <div class="col-span-3 flex flex-col justify-center">
+            <section class="bg-neutral-800 py-8 lg:py-16">
+                <div class="conteudo lg:grid-cols-5">
+                    <div class="flex flex-col justify-center lg:col-span-3">
                         <div class="mb-16">
-                            <p class="text-verde font-extrabold text-2xl mb-6 flex items-center">
+                            <p class="text-verde font-extrabold mb-6 flex items-center lg:text-2xl">
                                 <iconify-icon icon="lucide:badge-check" class="text-4xl mr-2 text-verde"></iconify-icon>
                                 Serviço Completo:
                             </p>
-                            <ul class="grid grid-cols-3 gap-2">
+                            <ul class="grid gap-2 grid-cols-2 lg:grid-cols-3">
                                 <li class="lp-lista-item">Análise com Drone</li>
                                 <li class="lp-lista-item">Módulo Fotovoltáico</li>
                                 <li class="lp-lista-item">Inversor Solar</li>
@@ -192,11 +192,11 @@
                             </ul>
                         </div>
                         <div>
-                            <p class="text-verde font-extrabold text-2xl mb-6 flex items-center">
+                            <p class="text-verde font-extrabold mb-6 flex items-center lg:text-2xl">
                                 <iconify-icon icon="lucide:badge-check" class="text-4xl mr-2 text-verde"></iconify-icon>
                                 Ideal para diversas atividades:
                             </p>
-                            <ul class="grid grid-cols-3 gap-2">
+                            <ul class="grid gap-2 grid-cols-2 lg:grid-cols-3">
                                 <li class="lp-lista-item">Postos de combutível</li>
                                 <li class="lp-lista-item">Galpões e fábricas</li>
                                 <li class="lp-lista-item">Empresas</li>
@@ -209,12 +209,15 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-span-2 flex flex-col justify-center">
-                        <img class="rounded-lg" src="../assets/img/grande-projetos.png" alt="" style="box-shadow:-20px 20px 0 #B3DE00">
+                    <div class="flex flex-col justify-center lg:col-span-2">
+                        <img class="rounded-lg scale-90 lg:scale-100" src="../assets/img/grande-projetos.png" alt="Grandes Projetos" style="box-shadow:-20px 20px 0 #B3DE00">
                     </div>
                 </div>
-                <a class="conteudo" href="https://api.whatsapp.com/send?phone=5511948084740&text=Ol%C3%A1!%0A%0AGostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20loca%C3%A7%C3%A3o%20de%20sistemas%20fotovoltaicos." target="_blank">
-                    <button class="btn w-1/2 mt-20 mx-auto uppercase text-lg shadow-md rounded-lg bg-azul p-6 text-branco font-extrabold">Fale Conosco e veja como funciona!</button>
+                <a class="conteudo my-12 lg:my-24" href="https://agroesolar.com.br/" target="_blank">
+                    <p class="text-verde m-0 text-center lg:text-2xl">Conheça a Agro&Solar</p>
+                </a>
+                <a class="conteudo mt-6" href="https://api.whatsapp.com/send?phone=5511948084740&text=Ol%C3%A1!%0A%0AGostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20loca%C3%A7%C3%A3o%20de%20sistemas%20fotovoltaicos." target="_blank">
+                    <button class="btn  mx-auto uppercase shadow-md rounded-lg bg-azul p-3 text-branco font-extrabold lg:w-1/2 lg:text-lg lg:p-6">Fale Conosco e veja como funciona!</button>
                 </a>
             </section>
         </main>
