--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -190,7 +190,7 @@
                             </div>
                         </div>
                         <div class="rounded-xl bg-white shadow-lg p-4 lg:p-16">
-                            <h2>Faça uma simulação</h2>
+                            <h2>Faça uma simulação aqui e agora</h2>
                             <span class="mb-16 font-extrabold">
                                 <label for="">Indira o valor médio da sua conta mensal:<br class="">R$ </label>
                                 <input class="outline-0 border-0" type="number" name="" id="range-conta" value="0" min="0" max="20000">
