fix: Correção link primeiro botão

--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -13,7 +13,7 @@
             <section class="bg-neutral-800 lp-back py-8 lg:py-16">
                 <div class="conteudo">
                     <span class="flex justify-center flex-col h-60">
-                        <h1 class="font-extrabold text-neutral-100 uppercase lg:text-6xl">Troque seu fornecedor <br> e tenha <strong>20% de economia</strong> <br> em sua conta imediatamente</h1>
+                        <h1 class="font-extrabold text-neutral-100 uppercase lg:text-6xl">Troque seu fornecedor <br> e tenha <strong class="text-verde">20% de economia</strong> <br> em sua conta imediatamente</h1>
                     </span>
                 </div>
             </section>
@@ -23,7 +23,7 @@
                         <img class="w-full mb-6 lg:w-72" src="../assets/img/logo-agro-e-solar-5.png" alt="Logotipo Agro&Solar">
                         <p class="font-extrabold uppercase text-azul lg:text-3xl lg:leading-10">Comece com a economia de 20% ao ano e chegue até 50%</p>
                         <p class="uppercase text-neutral-400 lg:text-xl"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong> em 20 anos.</p>
-                        <a class="mt-12 w-full lg:w-80" href="/#simulador" target="">
+                        <a class="mt-12 w-full lg:w-80 scroll-smooth scroll-p-8" href="#simulador" target="">
                             <button class="btn w-full text-xl shadow-md rounded-lg bg-verde text-branco font-extrabold">Faça uma simulação</button>
                         </a>
                     </div>
@@ -103,7 +103,7 @@
                         </span>
                     </div>
                 </div>
-                <div id="simulador" class="conteudo mt-20">
+                <div id="simulador" class="conteudo mt-20 -scroll-p-20">
                     <div class="mx-auto rounded-xl bg-white shadow-lg p-4 -ml-4 -mr-4 lg:ml-auto lg:mr-auto lg:w-1/2 lg:p-16">
                         <h2 class="font-extrabold text-5xl text-azul">Faça uma simulação aqui e agora</h2>
                         <div class="">
